--- a/Page_3.html
+++ b/Page_3.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
-    <link rel="stylesheet" href="Accueil.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <title>Document</title>
 </head>
 <body>
     <header>
@@ -22,5 +19,8 @@
         </nav>
     </div>
     </header>
+</body>
+<body>
+    
 </body>
 </html>
