--- a/Page_2.html
+++ b/Page_2.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+<img id="fond" src="Image_fond_accueil2.jpg" alt="rgddrr">
+<header>
+    <nav class="menu" aria-label="Menu principal">
+        
+        <a href="#" class="logo" aria-label="Accueil">Logo</a>
+        <div class="nav-links">
+            <a href="#accueil">Accueil</a>
+            <a href="#a-propos">À Propos</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </nav>
+</header>
 <body>
-    <header>
-    <div class="hero">
-        <nav>
-            <h2 class="logo">Logo<span><div class=""></div></span></h2>
-            <ul class="links">
-                <li><a href="Page_1.html">Page 1</a></li>
-                <li><a href="Page_2.html">Page 2</a></li>
-                <li><a href="Page_3.html">Page 3</a></li>
-                <li><a href="Page_4.html">Page 4</a></li>
-            </ul>
-        </nav>
-    </div>
-    </header>
-</body>
-<body>
-    
+    <div class="content">
+        <section id="accueil" class="section">Section Accueil</section>
+        <section id="a-propos" class="section">Section À Propos</section>
+        <section id="services" class="section">Section Services</section>
+        <section id="contact" class="section">Section Contact</section>
+    </div>  
 </body>
 </html>
