--- a/projet.html
+++ b/projet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="projet.css">
+    <link rel="stylesheet" href="styles/projet.css">
     <title>Projets</title>
 </head>
 <body>
@@ -32,13 +32,13 @@
         
         <div class="projet-container" id="arcane">
             <h3>Arcane</h3>
-            <img src="arcane.png" alt="Arcane">
+            <img src="images/projet/arcane.jpg" alt="Arcane">
         </div>
 
 
         <div class="projet-container" id="rocket">
             <h3>Rocket & Groot</h3>
-            <img src="rocket.png" alt="Rocket & Groot">
+            <img src="images/projet/rocket.jpg" alt="Rocket & Groot">
         </div>
     </section>
 
