--- a/Page_4.html
+++ b/Page_4.html
@@ -15,8 +15,8 @@
             <img class="logo" src="logo.png">
             <div class="nav-links">
                 <a href="index.html">Acceuil</a>
-                <a href="Page_1.html">Histoire</a>
-                <a href="Page_3.html">Projet</a>
+                <a href="histoire.html">Histoire</a>
+                <a href="projet.html">Projet</a>
                 <a href="#">Finance</a>
                 <a href="Page_2.html">À Propos</a>
             </div>
