ajout des images des projets

--- a/projet.html
+++ b/projet.html
@@ -49,31 +49,31 @@
 
         <div class="projet-container" id="enemy">
             <h3>Enemy</h3>
-            <img src="enemy.png" alt="Enemy">
+            <img src="images/projet/enemy.jpg" alt="Enemy">
         </div>
 
 
         <div class="projet-container" id="KDA">
             <h3>K/DA POP/STARS</h3>
-            <img src="kda.png" alt="K/DA POP/STARS">
+            <img src="images/projet/KDA-POP-STARS.jpg" alt="K/DA POP/STARS">
         </div>
 
 
-        <div class="projet-container" id="Rise">
+        <div class="projet-container" id="rise">
             <h3>Rise</h3>
-            <img src="rise.png" alt="Rise">
+            <img src="images/projet/rise.jpg" alt="Rise">
         </div>
 
 
         <div class="projet-container" id="freak">
             <h3>Freak of the week</h3>
-            <img src="freak.png" alt="Freak of the week">
+            <img src="images/projet/freak_of_the_week.jpg" alt="Freak of the week">
         </div>
 
 
         <div class="projet-container" id="gaviota">
             <h3>La Gaviota</h3>
-            <img src="gaviota.png" alt="La Gaviota">
+            <img src="images/projet/limousine-la-gaviota.jpg" alt="La Gaviota">
         </div>
     </section>  
 
@@ -83,19 +83,19 @@
 
         <div class="projet-container" id="warriors">
             <h3>Warriors - Imagine Dragons</h3>
-            <img src="warriors.mp4" alt="Warriors - Imagine Dragons">
+            <img src="/images/projet/warriors.jpg" alt="Warriors - Imagine Dragons">
         </div>
 
 
         <div class="projet-container" id="jinxed">
             <h3>Get Jinxed - League of Legends</h3>
-            <img src="jinxed.mp4" alt="Jinxed">
+            <img src="/images/projet/get_jinxed.jpg" alt="Jinxed">
         </div>
 
 
         <div class="projet-container" id="ekko">
             <h3>Ekko : Seconds - League of Legends</h3>
-            <img src="ekko.mp4" alt="Ekko : Seconds - League of Legends">
+            <img src="/images/projet/ekko.jpeg" alt="Ekko : Seconds - League of Legends">
         </div>
     </section>
 
@@ -104,7 +104,7 @@
 
         <div class="projet-container" id="Gorillaz">
             <h3>Gorillaz</h3>
-            <img src="gorillaz.mp4" alt="Gorillaz">
+            <img src="/images/projet/gorillaz.jpg" alt="Gorillaz">
         </div>
     </section>
 
