--- a/index.html
+++ b/index.html
@@ -4,23 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
-    <link rel="stylesheet" href="Accueil.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-</head>
-<body>
-    <header>
-    <div class="hero">
-        <nav>
-            <h2 class="logo">Logo<span><div class=""></div></span></h2>
-            <ul class="links">
-                <li><a href="Page_1.html">Page 1</a></li>
-                <li><a href="Page_2.html">Page 2</a></li>
-                <li><a href="Page_3.html">Page 3</a></li>
-                <li><a href="Page_4.html">Page 4</a></li>
-            </ul>
-        </nav>
-    </div>
-    </header>
-</body>
-</html>
+    <title>Histoire Fortiche Production</title>
+    
+    <header>Histoire Fortiche Production</header>
+    
