--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <header>
     <nav class="menu" aria-label="Menu principal">
         
-        <a href="#" class="logo" aria-label="Accueil">Logo</a>
+        <img class="logo" src="logo.png">
         <div class="nav-links">
-            <a href="#accueil">Accueil</a>
-            <a href="#a-propos">À Propos</a>
-            <a href="#services">Services</a>
-            <a href="#contact">Contact</a>
+            <a href="#">Acceuil</a>
+            <a href="histoire.html">Histoire</a>
+            <a href="projet.html">Projet</a>
+            <a href="Finance.html">Finance</a>
+            <a href="Page_2.html">À Propos</a>
         </div>
     </nav>
 </header>
