mise à jour de la bar de navigation

--- a/Finance.html
+++ b/Finance.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Finance.css">
+    <link rel="stylesheet" href="styles/Finance.css">
     <title>Document</title>
 </head>
 
 <header>
     <nav class="menu" aria-label="Menu principal">
         
-        <img class="logo" src="logo.png">
+        <img class="logo" src="images/Logo.png">
         <div class="nav-links">
             <a href="index.html">Accueil</a>
             <a href="histoire.html">Histoire</a>
