--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Histoire Fortiche Production</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<img id="fond" src="Image_fond_accueil2.jpg" alt="rgddrr">
+<img id="fond" src="images/Image_fond_accueil2.jpg" alt="rgddrr">
 <header>
     <nav class="menu" aria-label="Menu principal">
         
-        <img class="logo" src="logo.png">
+        <img class="logo" src="images/Logo.png">
         <div class="nav-links">
             <a href="#">Accueil</a>
             <a href="histoire.html">Histoire</a>
