--- a/projet.html
+++ b/projet.html
@@ -7,22 +7,21 @@
     <link rel="stylesheet" href="styles/projet.css">
     <title>Projets</title>
 </head>
-<body>
-    <header>
-    <div class="hero">
-        <nav>
-            <h2 class="logo">Logo<span><div class=""></div></span></h2>
-            <ul class="links">
-                <li><a href="Page_1.html">Page 1</a></li>
-                <li><a href="Page_2.html">Page 2</a></li>
-                <li><a href="Page_3.html">Page 3</a></li>
-                <li><a href="Page_4.html">Page 4</a></li>
-            </ul>
-        </nav>
-    </div>
-    </header>
-</body>
+<header>
+    <nav class="menu" aria-label="Menu principal">
+        
+        <img class="logo" src="images/Logo.png">
+        <div class="nav-links">
+            <a href="index.html">Accueil</a>
+            <a href="histoire.html">Histoire</a>
+            <a href="#">Projet</a>
+            <a href="Finance.html">Finance</a>
+            <a href="A_propos.html">À Propos</a>
+        </div>
+    </nav>
+</header>
 
+<body>
     <h1>Les projets de Fortiche Production</h1>
 
     
