--- a/index.html
+++ b/index.html
@@ -29,4 +29,7 @@
         <section id="contact" class="section">Section Contact</section>
     </div>  
 </body>
+<footer>
+    Fait par Rémi Sandrone, Maxime Miguet, Timothé Sandt, Rokhaya Diallo
+</footer>
 </html>
