--- a/A_propos.html
+++ b/A_propos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/Finance.css">
-    <title>Document</title>
+    <title>À Propos</title>
 </head>
 
 <header>
@@ -39,4 +39,10 @@
     </div>
 
 </body>
+
+<footer>
+    <p>Fait Rémi Sandrone</p>
+</footer>
+
+
 </html>
