--- a/Finance.html
+++ b/Finance.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/Finance.css">
-    <title>Document</title>
+    <title>Finance</title>
 </head>
 
 <header>
@@ -199,5 +199,9 @@
     </div>
 
 </body>
+
+<footer>
+    <p>Fait Maxime Miguet</p>
+</footer>
 
 </html>
