--- a/histoire.html
+++ b/histoire.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>HISTORIQUE FORTICHE PRODUCTION</title>
     <link rel="stylesheet" href="styles/histoire.css">
+    <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
 </head>
 
 <header>
