--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>Histoire Fortiche Production</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
 </head>
 <img id="fond" src="images/Image_fond_accueil2.jpg" alt="rgddrr">
 <header>
