--- a/projet.html
+++ b/projet.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="styles/projet.css">
-    <title>Projets</title>
+    <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
 </head>
 <header>
     <nav class="menu" aria-label="Menu principal">
