--- a/A_propos.html
+++ b/A_propos.html
@@ -11,7 +11,7 @@
 <header>
     <nav class="menu" aria-label="Menu principal">
         
-        <img class="logo" src="images/Logo.png">
+        <img class="logo" src="icone/logo.png">
         <div class="nav-links">
             <a href="index.html">Accueil</a>
             <a href="histoire.html">Histoire</a>
