--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <nav class="menu" aria-label="Menu principal">
         
-        <img class="logo" src="icone/logo.png">>
+        <img class="logo" src="icone/logo.png">
         <div class="nav-links">
             <a href="#">Accueil</a>
             <a href="histoire.html">Histoire</a>
