--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Histoire Fortiche Production</title>
+    <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
 </head>
-<img id="fond" src="images/Image_fond_accueil2.jpg" alt="rgddrr">
-<header>
-    <nav class="menu" aria-label="Menu principal">
-        
-        <img class="logo" src="icone/logo.png">
-        <div class="nav-links">
-            <a href="#">Accueil</a>
-            <a href="histoire.html">Histoire</a>
-            <a href="projet.html">Projet</a>
-            <a href="Finance.html">Finance</a>
-            <a href="A_propos.html">À Propos</a>
-        </div>
-    </nav>
-</header>
 <body>
+    <img id="fond" src="images/Image_fond_accueil2.jpg" alt="image de fond">
+    <header>
+        <nav id="menu" aria-label="Menu principal">
+            
+            <a href="index.html" id="logo_links">
+                <img id="logo" src="icone/logo.png">
+            </a>
+            <div class="nav-links">
+                <a href="#">Accueil</a>
+                <a href="histoire.html">Histoire</a>
+                <a href="projet.html">Projet</a>
+                <a href="Finance.html">Finance</a>
+                <a href="A_propos.html">À Propos</a>
+            </div>
+        </nav>
+    </header>
+
     <div class="content">
         <section id="accueil" class="section">Section Accueil</section>
         <section id="a-propos" class="section">Section À Propos</section>
         <section id="services" class="section">Section Services</section>
         <section id="contact" class="section">Section Contact</section>
     </div>  
+
+    <footer>
+        Fait par Rémi Sandrone, Maxime Miguet, Timothé Sandt, Rokhaya Diallo
+    </footer>
 </body>
-<footer>
-    Fait par Rémi Sandrone, Maxime Miguet, Timothé Sandt, Rokhaya Diallo
-</footer>
 </html>
