mise à jour du menu dans toutes les pages

--- a/Finance.html
+++ b/Finance.html
@@ -11,9 +11,11 @@
 </head>
 
 <header>
-    <nav class="menu" aria-label="Menu principal">
+    <nav id="menu" aria-label="Menu principal">
         
-        <img class="logo" src="icone/logo.png">
+        <a href="index.html" id="logo_links">
+            <img id="logo" src="icone/logo.png">
+        </a>
         <div class="nav-links">
             <a href="index.html">Accueil</a>
             <a href="histoire.html">Histoire</a>
