--- a/histoire.html
+++ b/histoire.html
@@ -9,9 +9,11 @@
 </head>
 
 <header>
-    <nav class="menu" aria-label="Menu principal">
+    <nav id="menu" aria-label="Menu principal">
         
-        <img class="logo" src="icone/logo.png">
+        <a href="index.html" id="logo_links">
+            <img id="logo" src="icone/logo.png">
+        </a>
         <div class="nav-links">
             <a href="#">Accueil</a>
             <a href="histoire.html">Histoire</a>
