--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img id="logo" src="icone/logo.png">
             </a>
             <div class="nav-links">
-                <a href="#">Accueil</a>
+                <a href="index.html">Accueil</a>
                 <a href="histoire.html">Histoire</a>
                 <a href="projet.html">Projet</a>
                 <a href="Finance.html">Finance</a>
