--- a/projet.html
+++ b/projet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/projet.css">
     <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
 </head>
@@ -18,7 +18,7 @@
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
                 <a href="histoire.html">Histoire</a>
-                <a href="#">Projet</a>
+                <a href="projet.html">Projet</a>
                 <a href="Finance.html">Finance</a>
                 <a href="A_propos.html">À Propos</a>
             </div>
