Renomme style.css -> Accueil.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Histoire Fortiche Production</title>
     <link rel="stylesheet" href="styles/menu.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/Accueil.css">
     <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
 </head>
 <body>
