Ajout <main> et couleur de fond

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </nav>
     </header>
 
-    <div class="content">
+    <main>
         <section id="accueil" class="section">Section Accueil</section>
         <section id="a-propos" class="section">Section À Propos</section>
         <section id="services" class="section">Section Services</section>
         <section id="contact" class="section">Section Contact</section>
-    </div>  
+    </main>  
 
     <footer>
         Fait par Rémi Sandrone, Maxime Miguet, Timothé Sandt, Rokhaya Diallo
