--- a/Finance.html
+++ b/Finance.html
@@ -9,16 +9,17 @@
     <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
     <title>Finance</title>
 </head>
-
     <header>
-        <nav class="menu" aria-label="Menu principal">
+        <nav id="menu" aria-label="Menu principal">
             
-            <img class="logo" src="icone/logo.png">
+            <a href="index.html" id="logo_links">
+                <img id="logo" src="icone/logo.png">
+            </a>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
                 <a href="histoire.html">Histoire</a>
                 <a href="projet.html">Projet</a>
-                <a href="#">Finance</a>
+                <a href="Finance.html">Finance</a>
                 <a href="A_propos.html">À Propos</a>
             </div>
         </nav>
