amélioration du style de projet

--- a/projet.html
+++ b/projet.html
@@ -36,6 +36,14 @@
                 <img src="images/projet/arcane.jpg" alt="Arcane">
                 <div class="projet-info">
                     <h3>Arcane</h3>
+                    <h4>Client : <em>Riot Games</em></h4>
+                    <p>1 Saison</p>
+                    <p>Genre : Animation, Action, Aventure</p>
+                    <p>Release Date : 2021</p>
+                    <p>Rating : 9/10</p>
+                </div>
+                <div class="projet-info-cache">
+                    <p>info supplémentaire</p>
                 </div>
             </div>
 
@@ -44,6 +52,14 @@
                 <img src="images/projet/rocket.jpg" alt="Rocket & Groot">
                 <div class="projet-info">
                     <h3>Rocket & Groot</h3>
+                    <h4>Client : <em>Marvel</em></h4>
+                    <p>2 Épisodes</p>
+                    <p>Genre : Animation, Comédie, Science-fiction</p>
+                    <p>Release Date : 2017</p>
+                    <p>Rating : 8/10</p>
+                </div>
+                <div class="projet-info-cache">
+                    <p>info supplémentaire</p>
                 </div>
             </div>
         </section>
