--- a/Finance.html
+++ b/Finance.html
@@ -53,6 +53,18 @@
             </p>
         </div>
         
+        <div class="graphe-container">
+            <div class="graphe">
+                <img src="images/projet/rocket.jpg" alt="Image 1">
+                <img src="images/projet/arcane.jpg" alt="Image 2">
+                <img src="images/projet/ekko.jpeg" alt="Image 3">
+                <img src="images/projet/rise.jpg" alt="Image 4">
+            </div>
+            <button class="nav-button prev">&lt;</button>
+            <button class="nav-button next">&gt;</button>
+        </div>
+
+
         <div class="tab">
             <h2>Information financière</h2>
             <!-- Tableau performance -->
@@ -207,6 +219,36 @@
         <p>Fait Maxime Miguet</p>
     </footer>
 </body>
+
+<script>
+    const graphe = document.querySelector('.graphe');
+    const images = graphe.querySelectorAll('img');
+    const prevButton = document.querySelector('.nav-button.prev');
+    const nextButton = document.querySelector('.nav-button.next');
+    let currentIndex = 0;
+
+    function showImage(index) {
+        if (index < 0) {
+            currentIndex = images.length - 1;
+        } else if (index >= images.length) {
+            currentIndex = 0;
+        } else {
+            currentIndex = index;
+        }
+        const offset = -currentIndex * 100;
+        graphe.style.transform = `translateX(${offset}%)`;
+    }
+
+    prevButton.addEventListener('click', () => {
+        showImage(currentIndex - 1);
+    });
+
+    nextButton.addEventListener('click', () => {
+        showImage(currentIndex + 1);
+    });
+
+    showImage(currentIndex);
+</script>
 
 
 </html>
