--- a/histoire.html
+++ b/histoire.html
@@ -46,20 +46,21 @@
 
             </div>
         </div>
+    </section>
+
+    <section class="clase">
 
         <div class="row">
-            <div class="text">
+            <div class="-col">
                <h1> yyyyyyyyyyyyyyyyyyy</h1>
                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.</p>
                
             </div>
-            <div class="im">
+            <div class="histoire-col">
                 <img src="images/a204a24_868320214-fortiche-production-pascal-charrue-jerome-combe-arnaud-delord.avif" >
 
             </div>
-
         </div>
-     
     </section>
 
     <!--  FOOTER -->
