Création de la page accueil

--- a/index.html
+++ b/index.html
@@ -30,10 +30,61 @@
     </header>
 
     <main>
-        <section id="accueil" class="section">Section Accueil</section>
-        <section id="a-propos" class="section">Section À Propos</section>
-        <section id="services" class="section">Section Services</section>
-        <section id="contact" class="section">Section Contact</section>
+        <section id="pages">
+            <div id="histoire" class="container_page">
+                <h2>Histoire</h2>
+                <img src="#" alt="image de fond">
+                <p>fait un petit résumer de la page</p>
+            </div>
+            <div id="projet" class="container_page">
+                <h2>Projet</h2>
+                <img src="#" alt="image de fond">
+                <p>projet</p>
+            </div>
+            <div id="finance" class="container_page">
+                <h2>Finances</h2>
+                <img src="#" alt="image de fond">
+                <p>Finances</p>
+            </div>
+            <div id="a_propos" class="container_page">
+                <h2>A propos</h2>
+                <img src="#" alt="image de fond">
+                <p>a propos</p>
+            </div>
+        </section>
+
+        <section id="footer">
+            <div>
+                <img src="" alt="logo Fortiche Production">
+            </div>
+            <div id="info">
+                <div id="contact">
+                    <h4>Fortiche Production</h4>
+                    <p>Studio d'animation à Paris</p>
+                    <p>100 av. de France, </p>
+                    <p>75013 Paris</p>
+                    <p>contact@forticheprod.com</p>
+                    <div class="social-links">
+                        <a href="https://www.facebook.com/fortiche.production/" target="_blank" class="social-link w-inline-block">
+                            <img src="https://cdn.prod.website-files.com/613f0d51a868284d7fae6814/613f1736206f3085ed6dc399_symbole-d%27application-facebook%201.svg" loading="lazy" alt="">
+                        </a>
+                        <a href="https://www.instagram.com/fortiche_prod" target="_blank" class="social-link w-inline-block">
+                            <img src="https://cdn.prod.website-files.com/613f0d51a868284d7fae6814/613f1736206f3068dc6dc39a_instagram%201.svg" loading="lazy" alt="">
+                        </a>
+                        <a href="https://www.linkedin.com/company/fortiche-production/?originalSubdomain=fr" target="_blank" class="social-link w-inline-block">
+                            <img src="https://cdn.prod.website-files.com/613f0d51a868284d7fae6814/613f1736ca838df0a65e7e2c_linkedin%201.svg" loading="lazy" alt="">
+                        </a>
+                        <a href="https://www.youtube.com/forticheproduction" target="_blank" class="social-link w-inline-block">
+                            <img src="https://cdn.prod.website-files.com/613f0d51a868284d7fae6814/613f1735206f3088346dc398_youtube%201.svg" loading="lazy" alt="">
+                        </a>
+                    </div>
+                
+                    </div>
+                <div id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2626.4862378294206!2d2.3751518768605493!3d48.829863302713136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e67324afd8a553%3A0x6598604413b6e717!2sFortiche%20Production!5e0!3m2!1sfr!2sfr!4v1729165711838!5m2!1sfr!2sfr" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </section>
     </main>  
 
     <footer>
