--- a/histoire.html
+++ b/histoire.html
@@ -51,12 +51,12 @@
     <section class="clase">
 
         <div class="row">
-            <div class="-col">
+            <div class="clase-col">
                <h1> yyyyyyyyyyyyyyyyyyy</h1>
                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.</p>
                
             </div>
-            <div class="histoire-col">
+            <div class="clase-col">
                 <img src="images/a204a24_868320214-fortiche-production-pascal-charrue-jerome-combe-arnaud-delord.avif" >
 
             </div>
