--- a/histoire.html
+++ b/histoire.html
@@ -11,7 +11,7 @@
 <body>
     <section class="sub-header">
 <nav>
-<a href=""><img src="images/logo.webp" ></a>
+<a href=""><img src="icone/logo.png" ></a>
 
 <div class="nav-links" id="navLinks">
 
@@ -25,11 +25,7 @@
 
 </div>
 </nav>
-<div class="text-box" >
 
-    <p></p>
-
-</div>
 </section>
 
 
