--- a/histoire.html
+++ b/histoire.html
@@ -16,7 +16,7 @@
 <div class="nav-links" id="navLinks">
 
     <ul>
-        <li><a href="exemple_acceuil.html">ACCEUIL</a></li>
+        <li><a href="histoire.html">ACCEUIL</a></li>
         <li><a href="">HISTOIRE</a></li>
         <li><a href="">PROJET</a></li>
         <li><a href="">FINANCE</a></li>
@@ -38,26 +38,13 @@
                
             </div>
             <div class="histoire-col">
-                <img src="images/a204a24_868320214-fortiche-production-pascal-charrue-jerome-combe-arnaud-delord.avif" >
+                <img src="" >
 
             </div>
         </div>
     </section>
 
-    <section class="clase">
-
-        <div class="row">
-            <div class="clase-col">
-               <h1> yyyyyyyyyyyyyyyyyyy</h1>
-               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.</p>
-               
-            </div>
-            <div class="clase-col">
-                <img src="images/a204a24_868320214-fortiche-production-pascal-charrue-jerome-combe-arnaud-delord.avif" >
-
-            </div>
-        </div>
-    </section>
+  
 
     <!--  FOOTER -->
 <section class="footer">
