--- a/A_propos.html
+++ b/A_propos.html
@@ -37,13 +37,13 @@
         </div>
         
         <div class="container">
-            <img src="" alt="">
+            <img src="images/Page_A_Propos/arcane.jpg" alt="">
             <div>
                 Fortiche est un studio d'animation français, célèbre pour son travail sur des projets comme Arcane, la série animée basée sur l'univers de League of Legends, en collaboration avec Riot Games.
             </div>
         </div>
         <div class="container">
-            <img src="" alt="">
+            <img src="images/Page_A_Propos/studios_fortiche.webp" alt="">
             <div>
                 Les studios de Fortiche Production sont basés à Paris, en France. Ils ont également des bureaux à Montpellier et à Las Palmas de Gran Canaria (aux îles Canaries, Espagne).
             </div>
@@ -55,18 +55,35 @@
             </div>
         </div>
         <div class="container">
-            <img src="" alt="">
+            <img src="images/Page_A_Propos/immagination_animation.PNG" alt="">
             <div>
+                La vision de Fortiche repose sur l’idée que l’animation n’est pas seulement un outil visuel, mais un puissant médium de narration qui peut susciter des émotions profondes et créer des univers immersifs.
             </div>
         </div>
-        <br>
-        <br>
-        <br>
-        La vision de Fortiche repose sur l’idée que l’animation n’est pas seulement un outil visuel, mais un puissant médium de narration qui peut susciter des émotions profondes et créer des univers immersifs. Leur ambition est de transformer chaque projet en une œuvre d’art à part entière, où la technologie et l’art se rencontrent pour offrir au public des expériences visuelles inédites. Le studio cherche à constamment innover, tant sur le plan technique qu’artistique, afin de raconter des histoires captivantes et émotionnellement riches.
-        <br>
-        L'un des aspects les plus fascinants de Fortiche est leur approche multidisciplinaire de la création. Leur équipe, composée de talents venus de divers horizons, inclut des artistes de storyboard, des animateurs 2D et 3D, des scénaristes, des techniciens en effets visuels, ainsi que des ingénieurs spécialisés dans les technologies numériques. Ce mélange de compétences permet à Fortiche de réaliser des œuvres visuellement complexes et émotionnellement percutantes. La diversité de l’équipe favorise une grande flexibilité dans leur approche, avec une culture d’entreprise qui valorise la collaboration, l’expérimentation et l’innovation.
-        <br>
-        Fortiche n’est pas seulement reconnu pour la qualité de son travail, mais aussi pour ses engagements sociaux et environnementaux. L’entreprise s'efforce d'adopter des pratiques de production durables en minimisant son empreinte écologique. De plus, Fortiche participe activement à des initiatives culturelles et éducatives, en collaborant avec des écoles d'art et en soutenant des jeunes talents à travers des stages et des programmes de mentorat. Ils s’engagent à promouvoir l’animation comme un art accessible et inclusif, en participant à des événements communautaires et en soutenant la prochaine génération de créateurs.
+        <div class="container">
+            <img src="" alt="">
+            <div>
+                L'un des aspects les plus fascinants de Fortiche est leur approche multidisciplinaire de la création. Leur équipe, composée de talents venus de divers horizons, inclut des artistes de storyboard, des animateurs 2D et 3D, des scénaristes, des techniciens en effets visuels, ainsi que des ingénieurs spécialisés dans les technologies numériques. 
+            </div>
+        </div>
+        <div class="container">
+            <img src="" alt="">
+            <div>
+                Ce mélange de compétences permet à Fortiche de réaliser des œuvres visuellement complexes et émotionnellement percutantes. La diversité de l’équipe favorise une grande flexibilité dans leur approche, avec une culture d’entreprise qui valorise la collaboration, l’expérimentation et l’innovation.
+            </div>
+        </div>
+        <div class="container">
+            <img src="" alt="">
+            <div>
+                Fortiche n’est pas seulement reconnu pour la qualité de son travail, mais aussi pour ses engagements sociaux et environnementaux. L’entreprise s'efforce d'adopter des pratiques de production durables en minimisant son empreinte écologique. 
+            </div>
+        </div>
+        <div class="container">
+            <img src="" alt="">
+            <div>
+                De plus, Fortiche participe activement à des initiatives culturelles et éducatives, en collaborant avec des écoles d'art et en soutenant des jeunes talents à travers des stages et des programmes de mentorat. Ils s’engagent à promouvoir l’animation comme un art accessible et inclusif, en participant à des événements communautaires et en soutenant la prochaine génération de créateurs.
+            </div>
+        </div>
     </div>
     </main>
     
