--- a/histoire.html
+++ b/histoire.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/histoire.css">
     <title>ACCEUIL</title>
 </head>
@@ -26,20 +27,49 @@
     </header>
 
     <main>
-        <section class="histoire">
-
+        <section class="premier">
             <div class="row">
-                <div class="histoire-col">
-                <h1> yyyyyyyyyyyyyyyyyyy</h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.</p>
-                
-                </div>
-                <div class="histoire-col">
-                    <img src="" >
-
+                <div class="premier">
+                <h2> FONDATEURS DE FORTICHE PRODUCTION</h2>
+                <p>Jérôme Combe, Pascal Charrue et Arnaud Delord ont créé Fortiche en 2009 et ont nommé le studio d'animation d'après leur état d'esprit du moment (Fortiche signifie As). Dès lors, ils n'ont cessé de travailler à faire de Fortiche une référence en tant que studio d'animation au niveau mondial.</p>
+                    <img src="images/fondateur.jfif" >
                 </div>
             </div>
-        </section>
+            </section>
+
+            <section class="deuxiéme">
+
+                <div class="row">
+                    <div class="deuxiéme">
+                    <h2> Les débuts et la fondation (2009-2013)</h2>
+                    <p>Fortiche a commencé avec des publicités, des clips musicaux, et des collaborations avec des entreprises de jeux vidéo. L’une de leurs premières œuvres notables a été la réalisation de clips pour des artistes comme Gorillaz, avec un style graphique distinctif. En 2013, Fortiche s'est fait connaître grâce à sa collaboration avec Riot Games pour le clip Get Jinxed, introduisant un personnage du jeu League of Legends. Ce clip a marqué le début d'une relation solide avec l'industrie du jeu vidéo​</p>
+                        <img src="images/PARTIE1.jfif" >
+                    </div>
+                </div>
+                </section>
+
+                <section class="troisiéme">
+
+                    <div class="row">
+                        <div class="troisiéme">
+                        <h2> Collaborations avec Riot Games et projets musicaux (2013-2018)</h2>
+                        <p>Suite au succès de Get Jinxed, Fortiche a réalisé plusieurs autres clips pour League of Legends, tels que Warriors (2014) et POP/STARS (2018). Leur travail, toujours innovant, a séduit un public international, renforçant leur collaboration avec Riot Games. Ces projets ont permis à Fortiche d'affiner son identité visuelle et d'expérimenter davantage avec des technologies de pointe dans l'animation​​</p>
+                            <img src="images/téléchargement.jfif" >
+                        </div>
+                    </div>
+                    </section>
+
+                    <section class="quatriéme">
+
+                        <div class="row">
+                            <div class="quatriéme">
+                            <h2>  Succès international avec Arcane (2021)</h2>
+                            <p>En 2015, Fortiche Production commence la production de Arcane, une série dérivée de League of Legends, avec un budget estimé entre 60 et 80 millions d'euros. Pour ce projet, le studio, initialement une petite entreprise, s'agrandit et ouvre des antennes à Montpellier et aux Canaries, mobilisant environ 500 personnes au total. À sa sortie en 2021, Arcane est un immense succès critique et commercial, remportant neuf Annie Awards. En mars 2022, Riot Games investit dans Fortiche, acquérant une participation minoritaire​​</p>
+                                <img src="images/arcane.jfif" >
+                            </div>
+                        </div>
+                        </section>
+
 
     </main>
 
