Changement image Finance

--- a/Finance.html
+++ b/Finance.html
@@ -60,20 +60,16 @@
         <div class="graphe-container">
             <div class="graphe">
                 <div class="graphe-item">
-                    <img src="images/projet/rocket.jpg" alt="Image 1">
-                    <h2 class="graphe-title">Titre de l'image 1</h2>
+                    <img src="images/Finance/CA_fortiche.png" alt="Image 1">
+                    <h3 class="graphe-title">Chiffre d'affaires</h3>
                 </div>
                 <div class="graphe-item">
-                    <img src="images/projet/arcane.jpg" alt="Image 2">
-                    <h2 class="graphe-title">Titre de l'image 2</h2>
+                    <img src="images/Finance/RN_fortiche.png" alt="Image 2">
+                    <h3 class="graphe-title">Résultat net</h3>
                 </div>
                 <div class="graphe-item">
-                    <img src="images/projet/ekko.jpeg" alt="Image 3">
-                    <h2 class="graphe-title">Titre de l'image 3</h2>
-                </div>
-                <div class="graphe-item">
-                    <img src="images/projet/rise.jpg" alt="Image 4">
-                    <h2 class="graphe-title">Titre de l'image 4</h2>
+                    <img src="images/Finance/Eff_fortiche.png" alt="Image 3">
+                    <h3 class="graphe-title">Effectif</h3>
                 </div>
             </div>
             <button class="nav-button prev">&lt;</button>
