ajout contenu dans accueil

--- a/index.html
+++ b/index.html
@@ -35,21 +35,25 @@
                 <h2>Histoire</h2>
                 <img src="#" alt="image de fond">
                 <p>fait un petit résumer de la page</p>
+                <a href="histoire.html" class="lien_page">Plus d'information</a>
             </div>
             <div id="projet" class="container_page">
                 <h2>Projet</h2>
                 <img src="#" alt="image de fond">
                 <p>projet</p>
+                <a href="projet.html" class="lien_page">Plus d'information</a>
             </div>
             <div id="finance" class="container_page">
                 <h2>Finances</h2>
                 <img src="#" alt="image de fond">
                 <p>Finances</p>
+                <a href="Finance.html" class="lien_page">Plus d'information</a>
             </div>
             <div id="a_propos" class="container_page">
                 <h2>A propos</h2>
                 <img src="#" alt="image de fond">
                 <p>a propos</p>
+                <a href="A_propos.html" class="lien_page">Plus d'information</a>
             </div>
         </section>
 
@@ -61,8 +65,10 @@
                 <div id="contact">
                     <h4>Fortiche Production</h4>
                     <p>Studio d'animation à Paris</p>
-                    <p>100 av. de France, </p>
-                    <p>75013 Paris</p>
+                    <div id="adresse">
+                        <p>100 av. de France, </p>
+                        <p>75013 Paris</p>
+                    </div>
                     <p>contact@forticheprod.com</p>
                     <div class="social-links">
                         <a href="https://www.facebook.com/fortiche.production/" target="_blank" class="social-link w-inline-block">
