Finalisation de la page à propos (ajout images, texte, style)

--- a/A_propos.html
+++ b/A_propos.html
@@ -30,7 +30,7 @@
         <h1>À propos</h1>
         
         <div class="container">
-            <img src="images/Page_A_Propos/logo.jpg" alt="logo Fortiche">
+            <img src="images/logo.jpg" alt="logo Fortiche">
             <div>
                 Fortiche Production, fondée en 2014, est une entreprise française d’animation et de production audiovisuelle qui s’est rapidement imposée comme l’un des studios les plus innovants et créatifs dans l’industrie. 
             </div>
@@ -55,31 +55,31 @@
             </div>
         </div>
         <div class="container">
-            <img src="images/Page_A_Propos/immagination_animation.PNG" alt="">
+            <img src="images/Page_A_Propos/immagination_animation.jpg" alt="">
             <div>
                 La vision de Fortiche repose sur l’idée que l’animation n’est pas seulement un outil visuel, mais un puissant médium de narration qui peut susciter des émotions profondes et créer des univers immersifs.
             </div>
         </div>
         <div class="container">
-            <img src="" alt="">
+            <img src="images/Page_A_Propos/Equipe_fortiche_studio_travail.jpg" alt="">
             <div>
                 L'un des aspects les plus fascinants de Fortiche est leur approche multidisciplinaire de la création. Leur équipe, composée de talents venus de divers horizons, inclut des artistes de storyboard, des animateurs 2D et 3D, des scénaristes, des techniciens en effets visuels, ainsi que des ingénieurs spécialisés dans les technologies numériques. 
             </div>
         </div>
         <div class="container">
-            <img src="" alt="">
-            <div>
+            <img src="images/Page_A_Propos/cooperation_image.jpg" alt="">
+            <div class="texte">
                 Ce mélange de compétences permet à Fortiche de réaliser des œuvres visuellement complexes et émotionnellement percutantes. La diversité de l’équipe favorise une grande flexibilité dans leur approche, avec une culture d’entreprise qui valorise la collaboration, l’expérimentation et l’innovation.
             </div>
         </div>
         <div class="container">
-            <img src="" alt="">
-            <div>
+            <img src="images/Page_A_Propos/initiatives_ecologiques.jpg" alt="">
+            <div class="texte">
                 Fortiche n’est pas seulement reconnu pour la qualité de son travail, mais aussi pour ses engagements sociaux et environnementaux. L’entreprise s'efforce d'adopter des pratiques de production durables en minimisant son empreinte écologique. 
             </div>
         </div>
         <div class="container">
-            <img src="" alt="">
+            <img src="images/Page_A_Propos/Initiatives_educatives.jpg" alt="">
             <div>
                 De plus, Fortiche participe activement à des initiatives culturelles et éducatives, en collaborant avec des écoles d'art et en soutenant des jeunes talents à travers des stages et des programmes de mentorat. Ils s’engagent à promouvoir l’animation comme un art accessible et inclusif, en participant à des événements communautaires et en soutenant la prochaine génération de créateurs.
             </div>
@@ -88,7 +88,7 @@
     </main>
     
     <footer>
-        <p>Fait Rémi Sandrone </p>
+        <p>Fait par Rémi Sandrone </p>
     </footer>
 </body>
 
