ajout contenu dans accueil

--- a/index.html
+++ b/index.html
@@ -34,32 +34,32 @@
             <div id="histoire" class="container_page">
                 <h2>Histoire</h2>
                 <img src="#" alt="image de fond">
-                <p>fait un petit résumer de la page</p>
+                <p>L'histoire de Fortiche Production depuis sa création et au travers de ses plus grands succès.</p>
                 <a href="histoire.html" class="lien_page">Plus d'information</a>
             </div>
             <div id="projet" class="container_page">
                 <h2>Projet</h2>
-                <img src="#" alt="image de fond">
-                <p>projet</p>
+                <img src="images/projet/arcane.jpg" alt="image de fond">
+                <p>Retrouvz ici tous les projets réaliser par Fortiche Production.</p>
                 <a href="projet.html" class="lien_page">Plus d'information</a>
             </div>
             <div id="finance" class="container_page">
                 <h2>Finances</h2>
                 <img src="#" alt="image de fond">
-                <p>Finances</p>
+                <p>Pour comprendre et analyser les finances de l'entreprise.</p>
                 <a href="Finance.html" class="lien_page">Plus d'information</a>
             </div>
             <div id="a_propos" class="container_page">
                 <h2>A propos</h2>
-                <img src="#" alt="image de fond">
-                <p>a propos</p>
+                <img src="images/logo.jpg" alt="image de fond">
+                <p>Pour plus d'information divers à propos de Fortiche Production.</p>
                 <a href="A_propos.html" class="lien_page">Plus d'information</a>
             </div>
         </section>
 
         <section id="footer">
             <div>
-                <img src="" alt="logo Fortiche Production">
+                <img src="images/logo.jpg" alt="logo Fortiche Production">
             </div>
             <div id="info">
                 <div id="contact">
