--- a/A_propos.html
+++ b/A_propos.html
@@ -21,7 +21,7 @@
                 <a href="histoire.html">Histoire</a>
                 <a href="projet.html">Projet</a>
                 <a href="Finance.html">Finance</a>
-                <a href="A_propos.html">À Propos</a>
+                <a href="A_propos.html" class="dessus">À Propos</a>
             </div>
         </nav>
     </header>
