--- a/Finance.html
+++ b/Finance.html
@@ -19,7 +19,7 @@
                 <a href="index.html">Accueil</a>
                 <a href="histoire.html">Histoire</a>
                 <a href="projet.html">Projet</a>
-                <a href="Finance.html">Finance</a>
+                <a href="Finance.html" class="dessus">Finance</a>
                 <a href="A_propos.html">À Propos</a>
             </div>
         </nav>
