--- a/histoire.html
+++ b/histoire.html
@@ -18,7 +18,7 @@
             </a>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
-                <a href="histoire.html">Histoire</a>
+                <a href="histoire.html" class="dessus">Histoire</a>
                 <a href="projet.html">Projet</a>
                 <a href="Finance.html">Finance</a>
                 <a href="A_propos.html">À Propos</a>
