mise à jour Accueil

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="pages">
             <div id="histoire" class="container_page">
                 <h2>Histoire</h2>
-                <img src="#" alt="image de fond">
+                <img src="images/Accueil/histoire.png" alt="image de fond">
                 <p>L'histoire de Fortiche Production depuis sa création et au travers de ses plus grands succès.</p>
                 <a href="histoire.html" class="lien_page">Plus d'information</a>
             </div>
@@ -45,7 +45,7 @@
             </div>
             <div id="finance" class="container_page">
                 <h2>Finances</h2>
-                <img src="#" alt="image de fond">
+                <img src="images/Accueil/finance.jpg" alt="image de fond">
                 <p>Pour comprendre et analyser les finances de l'entreprise.</p>
                 <a href="Finance.html" class="lien_page">Plus d'information</a>
             </div>
