--- a/A_propos.html
+++ b/A_propos.html
@@ -37,13 +37,13 @@
         </div>
         
         <div class="container">
-            <img src="images/Page_A_Propos/arcane.jpg" alt="">
+            <img src="images/projet/arcane.jpg" alt="">
             <div>
                 Fortiche est un studio d'animation français, célèbre pour son travail sur des projets comme Arcane, la série animée basée sur l'univers de League of Legends, en collaboration avec Riot Games.
             </div>
         </div>
         <div class="container">
-            <img src="images/Page_A_Propos/studios_fortiche.webp" alt="">
+            <img src="images/Page_A_Propos/studios_fortiche.jpg" alt="">
             <div>
                 Les studios de Fortiche Production sont basés à Paris, en France. Ils ont également des bureaux à Montpellier et à Las Palmas de Gran Canaria (aux îles Canaries, Espagne).
             </div>
