--- a/histoire.html
+++ b/histoire.html
@@ -56,7 +56,7 @@
                   
             <div class="container">   
                 <div>    
-                    <img src="images/histoire/arcane.jfif" >
+                    <img src="images/projet/arcane.jpg" >
                     <figcaption>Succès international avec Arcane (2021)</figcaption>
                 </div>     
                     <div>En 2015, Fortiche Production commence la production de Arcane, une série dérivée de League of Legends, avec un budget estimé entre 60 et 80 millions d'euros. Pour ce projet, le studio, initialement une petite entreprise, s'agrandit et ouvre des antennes à Montpellier et aux Canaries, mobilisant environ 500 personnes au total. À sa sortie en 2021, Arcane est un immense succès critique et commercial, remportant neuf Annie Awards. ​​</div>
@@ -64,7 +64,7 @@
 
             <div class="container">   
                 <div>    
-                    <img src="images/histoire/expansion.webp" >
+                    <img src="images/histoire/expansion.jpg" >
                     <figcaption>Expansion et perspectives futures</figcaption>
                 </div>     
                     <div>Fortiche continue d'innover et d'élargir son équipe. En 2022, Riot Games a acquis une part minoritaire du studio, renforçant encore leur partenariat stratégique. Fortiche travaille actuellement sur la saison 2 de Arcane et d'autres projets non révélés. Leur studio continue de s'imposer comme une référence dans l'industrie de l'animation, grâce à leur créativité et leur capacité à intégrer de nouvelles technologies. ​​</div>
