--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="pages">
             <div id="histoire" class="container_page">
                 <h2>Histoire</h2>
-                <img src="images/Accueil/histoire.png" alt="image de fond">
+                <img src="images/Accueil/histoire.jpg" alt="image de fond">
                 <p>L'histoire de Fortiche Production depuis sa création et au travers de ses plus grands succès.</p>
                 <a href="histoire.html" class="lien_page">Plus d'information</a>
             </div>
