--- a/A_propos.html
+++ b/A_propos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
         <nav id="menu" aria-label="Menu principal">
             
             <a href="index.html" id="logo_links">
-                <img id="logo" src="icone/logo.png">
+                <img id="logo" src="icone/logo.png" alt="logo Fortiche Production">
             </a>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
@@ -84,7 +84,6 @@
                 De plus, Fortiche participe activement à des initiatives culturelles et éducatives, en collaborant avec des écoles d'art et en soutenant des jeunes talents à travers des stages et des programmes de mentorat. Ils s’engagent à promouvoir l’animation comme un art accessible et inclusif, en participant à des événements communautaires et en soutenant la prochaine génération de créateurs.
             </div>
         </div>
-    </div>
     </main>
     
     <footer>
