--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
         <nav id="menu" aria-label="Menu principal">
             
             <a href="index.html" id="logo_links">
-                <img id="logo" src="icone/logo.png">
+                <img id="logo" src="icone/logo.png" alt="logo Fortiche Production">
             </a>
             <div class="nav-links">
                 <a href="index.html" class="dessus">Accueil</a>
