--- a/projet.html
+++ b/projet.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <title>Projets</title>
     <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/projet.css">
     <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
@@ -13,7 +14,7 @@
         <nav id="menu" aria-label="Menu principal">
             
             <a href="index.html" id="logo_links">
-                <img id="logo" src="icone/logo.png">
+                <img id="logo" src="icone/logo.png" alt="logo Fortiche Production">
             </a>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
