--- a/Finance.html
+++ b/Finance.html
@@ -12,8 +12,8 @@
     <header>
         <nav id="menu" aria-label="Menu principal">
             
-            <a href="index.html" id="logo_links" alt="logo Fortiche Production">
-                <img id="logo" src="icone/logo.png">
+            <a href="index.html" id="logo_links">
+                <img id="logo" src="icone/logo.png"  alt="logo Fortiche Production">
             </a>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
