--- a/A_propos.html
+++ b/A_propos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/menu.css">
-    <link rel="stylesheet" href="Propos.css">
+    <link rel="stylesheet" href="styles/Propos.css">
     <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
     <title>À Propos</title>
 </head>
