--- a/histoire.html
+++ b/histoire.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/histoire.css">
+    <link rel="icon" href="icone/favicon.ico" type="image/x-icon">
     <title>ACCEUIL</title>
 </head>
 
